edit changes from hw5

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
@@ -65,8 +65,8 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button type="button" class="button-close" data-modal-close>
-                <svg class="icon-close" width="18px" height="18px">
-                  <use href="./images/close-icon.svg"></use>
+                <svg class="icon-close" width="11px" height="11px">
+                  <use href="./images/icons-def-new.svg#icon-close"></use>
                 </svg>
               </button>
             </div>
@@ -82,7 +82,7 @@
               <div class="thumb">
                 <svg class="icon-benefits">
                   <use
-                    href="./images/logo.svg#icon-antenna"
+                    href="./images/icons-def.svg#icon-antenna"
                     width="70px"
                     height="70px"
                   ></use>
@@ -99,7 +99,7 @@
               <div class="thumb">
                 <svg class="icon-benefits">
                   <use
-                    href="./images/logo.svg#icon-clock"
+                    href="./images/icons-def.svg#icon-clock"
                     width="70px"
                     height="70px"
                   ></use>
@@ -160,7 +160,7 @@
                 />
 
                 <div class="action-activities">
-                  <p class="action-text">Десктопні додатки</p>
+                  <p class="text-action">Десктопні додатки</p>
                 </div>
               </article>
             </li>
@@ -173,7 +173,7 @@
                   width="370"
                 />
                 <div class="action-activities">
-                  <p class="action-text">Мобільні додатки</p>
+                  <p class="text-action">Мобільні додатки</p>
                 </div>
               </article>
             </li>
@@ -181,7 +181,7 @@
               <article class="img-activities">
                 <img src="./images/hero2.jpg" alt="Дизайн" width="370" />
                 <div class="action-activities">
-                  <p class="action-text">Дизайнерські рішення</p>
+                  <p class="text-action">Дизайнерські рішення</p>
                 </div>
               </article>
             </li>
