--- a/portfolio.html
+++ b/portfolio.html
@@ -362,6 +362,9 @@
             </li>
           </ul>
         </div>
+        <div class="join">
+          <p class="join-text">Підпишіться на розсилку</p>
+        </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
