--- a/portfolio.html
+++ b/portfolio.html
@@ -62,19 +62,19 @@
 
           <ul class="list-services">
             <li class="button-list">
-              <button type="button" class="button-secondary">Усі</button>
+              <button type="submit" class="button-secondary">Усі</button>
             </li>
             <li class="button-list">
-              <button type="button" class="button-secondary">Веб-сайти</button>
+              <button type="submit" class="button-secondary">Веб-сайти</button>
             </li>
             <li class="button-list">
-              <button type="button" class="button-secondary">Додатки</button>
+              <button type="submit" class="button-secondary">Додатки</button>
             </li>
             <li class="button-list">
-              <button type="button" class="button-secondary">Дизайн</button>
+              <button type="submit" class="button-secondary">Дизайн</button>
             </li>
             <li class="button-list">
-              <button type="button" class="button-secondary">Маркетинг</button>
+              <button type="submit" class="button-secondary">Маркетинг</button>
             </li>
           </ul>
 
@@ -362,8 +362,19 @@
             </li>
           </ul>
         </div>
+
         <div class="join">
           <p class="join-text">Підпишіться на розсилку</p>
+          <form class="join-form">
+            <label for="mail"></label>
+            <input type="email" name="mail" id="mail" placeholder="E-mail" />
+            <button type="submit" class="button-join">
+              Підписатися
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/symbol-defs-modal.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
