--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <li class="item">
                     <a href="#" aria-label="Instagram" class="link">
                       <span class="visually-hidden">інстаграм</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -206,7 +206,7 @@
                   <li class="item">
                     <a href="#" aria-label="Twitter" class="link">
                       <span class="visually-hidden">твітер</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -215,7 +215,7 @@
                   <li class="item">
                     <a href="#" aria-label="Facebook" class="link">
                       <span class="visually-hidden">фейсбук</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-fb"></use>
                       </svg>
                     </a>
@@ -224,7 +224,7 @@
                   <li class="item">
                     <a href="#" aria-label="Linkedine" class="link">
                       <span class="visually-hidden">лінкедін</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -245,7 +245,7 @@
                   <li class="item">
                     <a href="#" aria-label="Instagram" class="link">
                       <span class="visually-hidden">інстаграм</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -254,7 +254,7 @@
                   <li class="item">
                     <a href="#" aria-label="Twitter" class="link">
                       <span class="visually-hidden">твітер</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -263,7 +263,7 @@
                   <li class="item">
                     <a href="#" aria-label="Facebook" class="link">
                       <span class="visually-hidden">фейсбук</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-fb"></use>
                       </svg>
                     </a>
@@ -272,7 +272,7 @@
                   <li class="item">
                     <a href="#" aria-label="Linkedine" class="link">
                       <span class="visually-hidden">лінкедін</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -294,7 +294,7 @@
                   <li class="item">
                     <a href="#" aria-label="Instagram" class="link">
                       <span class="visually-hidden">інстаграм</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -303,7 +303,7 @@
                   <li class="item">
                     <a href="#" aria-label="Twitter" class="link">
                       <span class="visually-hidden">твітер</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -312,7 +312,7 @@
                   <li class="item">
                     <a href="#" aria-label="Facebook" class="link">
                       <span class="visually-hidden">фейсбук</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-fb"></use>
                       </svg>
                     </a>
@@ -321,7 +321,7 @@
                   <li class="item">
                     <a href="#" aria-label="Linkedine" class="link">
                       <span class="visually-hidden">лінкедін</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -343,7 +343,7 @@
                   <li class="item">
                     <a href="#" aria-label="Instagram" class="link">
                       <span class="visually-hidden">інстаграм</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -352,7 +352,7 @@
                   <li class="item">
                     <a href="#" aria-label="Twitter" class="link">
                       <span class="visually-hidden">твітер</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -361,7 +361,7 @@
                   <li class="item">
                     <a href="#" aria-label="Facebook" class="link">
                       <span class="visually-hidden">фейсбук</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-fb"></use>
                       </svg>
                     </a>
@@ -370,7 +370,7 @@
                   <li class="item">
                     <a href="#" aria-label="Linkedine" class="link">
                       <span class="visually-hidden">лінкедін</span>
-                      <svg class="social-icon" width="20px" height="20px">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons-def.svg#icon-link"></use>
                       </svg>
                     </a>
@@ -492,28 +492,28 @@
           <ul class="subscripton-list">
             <li class="subscription-item">
               <a href="#" class="link">
-                <svg class="social-link" width="20px" height="20px">
+                <svg class="social-link" width="20" height="20">
                   <use href="./images/icons-def.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="subscription-item">
               <a href="#" class="link">
-                <svg class="social-link" width="20px" height="20px">
+                <svg class="social-link" width="20" height="20">
                   <use href="./images/icons-def.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="subscription-item">
               <a href="#" class="link">
-                <svg class="social-link" width="20px" height="20px">
+                <svg class="social-link" width="20" height="20">
                   <use href="./images/icons-def.svg#icon-fb"></use>
                 </svg>
               </a>
             </li>
             <li class="subscription-item">
               <a href="#" class="link">
-                <svg class="social-link" width="20px" height="20px">
+                <svg class="social-link" width="20" height="20">
                   <use href="./images/icons-def.svg#icon-link"></use>
                 </svg>
               </a>
@@ -542,32 +542,32 @@
         <form class="modal-active">
           <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
 
+          <label for="name">Ім'я</label>
           <div class="form-field">
-            <label for="name">Ім'я</label>
             <input type="text" name="text" id="name" placeholder="" autofocus />
-            <svg class="modal-icon" width="12" height="12">
+            <svg class="modal-icon" width="18" height="18">
               <use href="./images/defs-name.svg#icon-name-modal"></use>
             </svg>
           </div>
 
+          <label for="name">Телефон</label>
           <div class="form-field">
-            <label for="name">Телефон</label>
             <input type="tel" name="tel" id="tel" />
-            <svg class="modal-icon" width="13" height="13">
+            <svg class="modal-icon" width="18" height="18">
               <use href="./images/symbol-defs-modal.svg#icon-phone-modal"></use>
             </svg>
           </div>
 
+          <label for="mail">Пошта</label>
           <div class="form-field">
-            <label for="mail">Пошта</label>
             <input type="email" name="mail" id="mail" />
-            <svg class="modal-icon" width="15" height="12">
+            <svg class="modal-icon" width="18" height="18">
               <use href="./images/symbol-defs-modal.svg#icon-mail-modal"></use>
             </svg>
           </div>
 
+          <label for="comment">Коментар</label>
           <div class="form-field">
-            <label for="comment">Коментар</label>
             <textarea
               name="comment"
               id="comment"
@@ -599,7 +599,7 @@
         </form>
 
         <button type="submit" class="button-close" data-modal-close>
-          <svg class="icon-close" width="11px" height="11px">
+          <svg class="icon-close" width="11" height="11">
             <use href="./images/icons-def-new.svg#icon-close"></use>
           </svg>
         </button>
